# rs-error

./: COVERAGE.md  COVERAGE.zh_CN.md  Cargo.toml  README.md  README.zh_CN.md  rustfmt.toml
src/: lib.rs
src/error/: box_error.rs  box_result.rs  dyn_error.rs  into_box_error.rs  mod.rs
src/lang/: mod.rs
src/lang/error/: box_error.rs  box_result.rs  dyn_error.rs  mod.rs
tests/: error_tests.rs
tests/error/: box_error_tests.rs  box_result_tests.rs  dyn_error_tests.rs  into_box_error_tests.rs  mod.rs
tests/lang/: mod.rs
tests/lang/error/: box_result_tests.rs  dyn_error_tests.rs  into_box_error_tests.rs
