[package]
name = "qubit-error"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-error"
description = "Shared error handling helpers for Rust applications"
homepage = "https://github.com/qubit-ltd/rs-error"
documentation = "https://docs.rs/qubit-error"
readme = "README.md"
keywords = ["error", "result", "utility", "qubit"]
categories = ["development-tools", "rust-patterns"]
exclude = [
    "coverage.sh",
    "COVERAGE.md",
    "COVERAGE.zh_CN.md",
    ".circleci/*",
    "ci-check.sh",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_error"
doctest = true
test = true

[dependencies]
