[package]
name = "qubit-error"
version = "0.2.4"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-error"
description = "Shared error handling helpers for Rust applications"
homepage = "https://github.com/qubit-ltd/rs-error"
documentation = "https://docs.rs/qubit-error"
readme = "README.md"
keywords = ["error", "result", "utility", "qubit"]
categories = ["development-tools", "rust-patterns"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/RUST_CODING_STYLE.md",
    "/RUST_CODING_STYLE.zh_CN.md",
    "/doc/**/user_guide*.md",
    "/examples/**",
    "/resources/**",
    "/src/**",
    "/tests/**",
]

[lib]
name = "qubit_error"
doctest = true
test = true

[dependencies]
